# visual_interception_event_window

./: AGENTS.md  README.md
crates/view-cli/: Cargo.toml
crates/view-cli/src/: main.rs  ui.rs
crates/view-core/: Cargo.toml
crates/view-core/src/: app.rs  engine.rs  lib.rs  listener.rs  terminal.rs
crates/view-desktop/: Cargo.toml
crates/view-desktop/src/: desktop_app.rs  main.rs  shell.rs  transcript.rs
crates/view-web/: Cargo.toml
crates/view-web/src/: api.rs  lib.rs  ws.rs
src/: app.rs  listener.rs  ui.rs
