[package]
name = "view-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI mission-control surface for VIEW"
readme = "../../README.md"
keywords = ["terminal", "tui", "agents", "observability", "dashboard"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
view-core = { path = "../view-core" }
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12.5"
