[package]
name = "view-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Desktop mission-control shell for VIEW"
readme = "../../README.md"
keywords = ["desktop", "terminal", "agents", "workspace", "observability"]
categories = ["development-tools", "gui"]

[dependencies]
view-core = { path = "../view-core" }
eframe = { version = "0.27", features = ["__screenshot"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
